Sat Oct 20 11:00:00 2012  Zachary Scott	<zachary@zacharyscott.net>

	* lib/open-uri.rb: Documentation for OpenURI

Sat Oct 20 06:18:34 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): unset the default proc if there isn't one
	  for the target hash, call to_hash, check frozen status.

Fri Oct 19 22:22:01 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_jump_tag_but_local_jump): pass through thrown objects.
	  [ruby-dev:46234] [Bug #7185]

	* vm_eval.c (rb_eval_cmd): if state is non-zero, val should be nil and
	  rb_vm_jump_tag_but_local_jump() just jump tag.

Fri Oct 19 22:11:55 2012  Benoit Daloze  <eregontp@gmail.com>

	* pack.c (pack_unpack): set encoding of the
	  'H','h','B' and 'B' modifiers to US-ASCII.

	* test/ruby/test_pack.rb: tests for the above.
	  [ruby-core:47653][Bug #7050]

	* test/test_securerandom.rb: tests for SecureRandom.hex
	  from tenderlove. [ruby-core:46792][Bug #6799]

Fri Oct 19 19:29:11 2012  Koichi Sasada  <ko1@atdot.net>

	* method.h (rb_method_cfunc_t::invoker): add new field (func ptr)
	  `invoker'. `invoker' function invoke cfunc body
	  (rb_method_cfunc_t::func).
	  `invoker' is set at method definition timing.
	  With this change, the big `switch' (branch) in `call_cfunc()'
	  is no longer needed.
	  However, the performance benefit is only a bit.

	* vm_core.h (rb_call_info_t::aux::func): add a new field to store
	  cfunc body function pointer.

	* vm_method.c (call_cfunc_invoker_func): add a new function which
	  returns a suitable invoke function.

	* vm_method.c (setup_method_cfunc_struct): added.

	* vm_method.c (rb_add_method): fix to set `invoker'.

	* vm_eval.c (vm_call0_body): catch up above changes.

	* vm_insnhelper.c (call_cfunc): removed.

	* vm_insnhelper.c (vm_call_cfunc): fix to call cfunc body
	  with `invoker' function.

Fri Oct 19 16:55:58 2012  Koichi Sasada  <ko1@atdot.net>

	* eval.c, vm_eval.c: use TH_PUSH_TAG() instead of PUSH_TAG().
